--- a/RuLabIG/sushi-config.yaml
+++ b/RuLabIG/sushi-config.yaml
@@ -4,7 +4,7 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: ru.lab
-canonical: http://example.org
+canonical: http://fhir.ru/lab
 name: RuLabIG
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
@@ -24,8 +24,8 @@ publisher:
 # package id and the value is the version (or dev/current). For advanced
 # use cases, the value can be an object with keys for id, uri, and version.
 #
-# dependencies:
-#   hl7.fhir.us.core: 3.1.0
+dependencies:
+  ru.core: dev
 #   hl7.fhir.us.mcode:
 #     id: mcode
 #     uri: http://hl7.org/fhir/us/mcode/ImplementationGuide/hl7.fhir.us.mcode
