--- a/RuLabIG/.gitignore
+++ b/RuLabIG/.gitignore
@@ -1,8 +1,9 @@
 .DS_Store
 Thumbs.db
 /fsh-generated
-/input-cache
 /output
 /temp
 /template
 /input/fsh
+/input-cache/schemas
+/input-cache/txcache
