--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     pull_policy: always
     volumes:
       - ./keystore:/app/keystore
+      - ~/.ssh:~/.ssh
     ports:
       - "8080:8080"
       - "8081:8081"
