--- a/RuCoreIG/sushi-config.yaml
+++ b/RuCoreIG/sushi-config.yaml
@@ -4,11 +4,11 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: ru.core
-canonical: http://fhir.ru/core
+canonical: https://fhir.ru/core
 name: RuCoreIG
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
-status: draft # draft | active | retired | unknown
+status: active # draft | active | retired | unknown
 version: 0.1.0
 fhirVersion: 5.0.0 # https://www.hl7.org/fhir/valueset-FHIR-version.html
 copyrightYear: 2023+
