feat: improve fsh validation

--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "scripts": {},
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "fsh-sushi": "^3.8.0",
     "js-yaml": "^4.1.0"
