--- a/RuCoreIG/sushi-config.yaml
+++ b/RuCoreIG/sushi-config.yaml
@@ -4,7 +4,7 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: ru.core
-canonical: http://fhir.ru/ig/core/v1
+canonical: http://fhir.ru/ig/core
 name: RuCoreIG
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
