--- a/RuLabIG/sushi-config.yaml
+++ b/RuLabIG/sushi-config.yaml
@@ -4,7 +4,7 @@
 # │  see: https://fshschool.org/docs/sushi/configuration/.                                         │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: ru.lab
-canonical: http://fhir.ru/ig/lab
+canonical: https://fhir.ru/ig/lab
 name: RuLabIG
 # title: Example Title
 # description: Example Implementation Guide for getting started with SUSHI
