--- a/nginx.conf
+++ b/nginx.conf
@@ -33,4 +33,13 @@ http {
             include /etc/nginx/mime.types;
         }
     }
+
+    server {
+        listen 8084;
+
+        location / {
+            root /app/IGIndex;
+            include /etc/nginx/mime.types;
+        }
+    }
 }
