New landing added + RuLab publishing stopped

--- a/nginx.conf
+++ b/nginx.conf
@@ -42,4 +42,13 @@ http {
             include /etc/nginx/mime.types;
         }
     }
+
+    server {
+        listen 8085;
+
+        location / {
+            root /app/newLanding;
+            include /etc/nginx/mime.types;
+        }
+    }
 }
